fix too small

--- a/css_js/pageBuilder.scss
+++ b/css_js/pageBuilder.scss
@@ -15,7 +15,5 @@ body {
     //margin: 0 0 0 2em;
   }
 
-  li font {
-    font-size: 0.25em;
-  }
+
 }
